Fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -826,6 +826,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow: hidden;
 }
 
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
 .overflow-x-scroll{
   overflow-x: scroll;
 }
